--- a/src/components/topBar/topBar.css
+++ b/src/components/topBar/topBar.css
@@ -10,6 +10,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .topbar-left {
